%% Some pre-defined commands: \R, \code, \acronym, \url, \file, \pkg
%% Since R 3.2.0, additional system Rd macros are available,
%% e.g., \CRANpkg and \doi. See the definitions in the file
%% file.path(R.home("share"), "Rd", "macros", "system.Rd")

\name{NEWS}
\title{News for Package 'surveillance'}
\encoding{latin1}


\section{Changes in surveillance version 1.17.2 (2019-11-11)}{

\subsection{MINOR CHANGES}{
  \itemize{
    \item For multivariate time series, \code{sts()} now checks for
    mismatches in column names of supplied matrices (\code{observed},
    \code{population}, \code{neighbourhood}, ...). This is to catch
    input where the units (columns) are ordered differently in
    different slots, which would flaw subsequent analyses.
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item \code{simulate.twinSIR()} ignored the \code{atRiskY} indicator
    of the underlying \code{"epidata"}, so always assumed a completely
    susceptible population. Initially infectious individuals are now
    inherited. For the previous behaviour, adjust the supplied
    \code{data} via \code{data$atRiskY <- 1}.
  }
}

}


\section{Changes in surveillance version 1.17.1 (2019-09-13)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item New one-parameter power-law kernel \code{siaf.powerlaw1()}
    with fixed \code{sigma = 1}. Useful if \code{sigma} is difficult to
    estimate with \code{siaf.powerlaw()}.
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item \code{pit()}'s default \code{ylab} was wrong (default are
    densities not relative frequencies).

    \item \code{R0()} for \code{"twinstim"} fits with specified
    \code{newevents} now handles levels of epidemic factor variables
    automatically via the new \code{xlevels} attribute stored in the
    fitted model.

    \item Some S3 methods for the \code{"sts"} class are now formally
    registered and identical to the established S4 methods.
    
    \item Minor additions and fixes in the package documentation.
  }
}
